# LLMStreamlitDemoBasic

./: .gitignore  .replit  LICENSE  README.md  app-agent.py  app.py  llm_helper.py  pyproject.toml  requirements.txt
.streamlit/: secrets.toml
index/: Mahmoudi_Nima_202202_PhD.pdf.index.faiss  Mahmoudi_Nima_202202_PhD.pdf.index.pkl  NIPS-2017-attention-is-all-you-need-Paper.pdf.index.faiss  NIPS-2017-attention-is-all-you-need-Paper.pdf.index.pkl
